// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageFolderGauge Render should display the image gauge when 35 Mb are used over 100 1`] = `
<Memo(ImageFolderGauge)
  storageSizeInMB={35}
  storageSizeLimitInMB={100}
>
  <Progress
    barStyle={Object {}}
    color="success"
    max={100}
    min={0}
    style={Object {}}
    tag="div"
    value={35}
  >
    <div
      className="progress"
      style={Object {}}
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={35}
        className="progress-bar bg-success"
        role="progressbar"
        style={
          Object {
            "width": "35%",
          }
        }
      >
        35
         
        of
         
        100
        MB
      </div>
    </div>
  </Progress>
</Memo(ImageFolderGauge)>
`;

exports[`ImageFolderGauge Render should display the image gauge when 60 Mb are used over 100 1`] = `
<Memo(ImageFolderGauge)
  storageSizeInMB={60}
  storageSizeLimitInMB={100}
>
  <Progress
    barStyle={Object {}}
    color="warning"
    max={100}
    min={0}
    style={Object {}}
    tag="div"
    value={60}
  >
    <div
      className="progress"
      style={Object {}}
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={60}
        className="progress-bar bg-warning"
        role="progressbar"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        60
         
        of
         
        100
        MB
      </div>
    </div>
  </Progress>
</Memo(ImageFolderGauge)>
`;

exports[`ImageFolderGauge Render should display the image gauge when 85 Mb are used over 100 1`] = `
<Memo(ImageFolderGauge)
  storageSizeInMB={85}
  storageSizeLimitInMB={100}
>
  <Progress
    barStyle={Object {}}
    color="danger"
    max={100}
    min={0}
    style={Object {}}
    tag="div"
    value={85}
  >
    <div
      className="progress"
      style={Object {}}
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={85}
        className="progress-bar bg-danger"
        role="progressbar"
        style={
          Object {
            "width": "85%",
          }
        }
      >
        85
         
        of
         
        100
        MB
      </div>
    </div>
  </Progress>
</Memo(ImageFolderGauge)>
`;
